manifests/media-apps/sabnzbd/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sabnzbd
  namespace: media-apps
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  ingress:
    - fromEntities:
        - ingress
        - cluster
      toPorts:
        - ports:
            - port: "8080"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudflare-tunnel
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "8080"
    - fromEndpoints:
        - matchLabels:
            appGroup: media-arr
      toPorts:
        - ports:
            - port: "8080"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "1900"
        - ports:
            - port: "563"
